--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -3,7 +3,7 @@
 <title>Webcase client Test</title>
 <script src="libshine.js"></script>
 <script src="libmp3lame.js"></script>
-<script src="../lib/webcast.js"></script>
+<script src="webcast.js"></script>
 <script language="javascript" type="text/javascript">
   navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia;
 
